--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;600;700&family=Poppins:wght@100;500&display=swap" rel="stylesheet">
+    <link href="/dist/output.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React Spending Tracker</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="bg-gray-100 h-screen">
+    <div id="root" class="h-full"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
